Fix HTTP server performance degradation with forkDaemon and connection pooling improvements
This commit addresses critical performance issues that caused the HTTP server to degrade
from 82k req/s to 48k req/s over time with 182-second latency spikes. The fixes result in
sustained 86.7k req/s throughput with sub-2ms max latency.

## Root Causes Fixed

1. **Fiber tracking accumulation in NativeHttpServer**
   - Server forked connection handlers with `.fork`, causing unbounded tracking
   - Eru's rootFibers queue accumulated completed fibers, causing GC pressure
   - Solution: Use `.forkDaemon` for fire-and-forget connection handlers

2. **Connection pool backpressure inefficiency**
   - Retry loop with exponential backoff created CPU waste and unfairness
   - No proper resource management for per-connection buffers/readers
   - Solution: Semaphore-based fair backpressure + isolated buffer/reader management

3. **Request/response allocation overhead**
   - Each request allocated new ByteBuffers and BufferedSocketReaders
   - Connection pooling didn't extend to I/O buffers
   - Solution: Pool buffers and readers alongside connections

## Changes

**Server (NativeHttpServer.scala)**:
- Use `.forkDaemon` instead of `.fork` for connection handlers (line 86)
- Prevents fiber tracking accumulation in long-running servers

**Client Connection Pool (ConnectionPool.scala)**:
- Replace retry loops with semaphore-based backpressure
  - Global semaphore for total connection limit
  - Per-host semaphores for per-host limits
  - FIFO fairness, no exponential backoff
- Add buffer management API: `getBuffer(conn)` returns pooled 4KB ByteBuffer
- Add reader management API: `getReader(conn)` returns pooled BufferedSocketReader
- Proper cleanup of buffers/readers on connection removal

**HTTP Client (NativeHttpClient.scala)**:
- Use pooled buffers for zero-allocation request writing
- Use pooled readers for zero-allocation response parsing
- Add Connection: keep-alive header for connecti